# TestTask1

./: CMakeLists.txt  README.md
Lib/: CMakeLists.txt
Lib/include/: Point.h  Tmp.h  Tools.h  Vector.h
Lib/src/: Point.cpp  Tmp.cpp  Tools.cpp  Vector.cpp
Solution1/: CMakeLists.txt  main.cpp
Solution1/include/: stdafx.h
Test/: main.cpp
